--- a/template/index.html
+++ b/template/index.html
@@ -7,9 +7,10 @@
 	<title>Primary</title>
 </head>
 <body>
+	<div class="background-image"></div>
 	<div class="background"></div>
 
-	<div class="main dbg">
+	<div class="main">
 		<div class="tb">
 
 			<div class="lr">
@@ -186,7 +187,7 @@
 						</div>
 					</div>
 
-					<div class="section">
+					<div class="section achievements">
 						<div class="name">Osiągnięcia</div>
 						<div class="text">I'm known for my proactive approach and strong organizational skills, reflecting our dedication to exceptional customer experiences. I'm eager to learn new digital marketing strategies and contribute to the company's continued growth and success.</div>
 						<div class="competition">
