css: Split into separate files

--- a/template/style/main.css
+++ b/template/style/main.css
@@ -1,349 +1,6 @@
-@import url(fonts/fonts.css);
-@import url(material-icons/material-icons.css);
-
-/* Global */
-.dark {
-	filter: invert(1) !important;
-	backdrop-filter: invert(1) !important;
-}
-body, html {
-	background: #FFF;
-	color: #222;
-	margin: 0 auto;
-	padding: 0;
-	min-width: 210mm;
-	max-width: 210mm;
-	min-height: 297mm;
-	max-height: 297mm;
-	font-size: 3.25mm;
-	font-weight: 500;
-	font-family: "Manrope";
-}
-.background-image {
-	background: url(../img/background.svg) repeat;
-	background-size: 100%;
-	background-position: center;
-	background-clip: content-box;
-	position: fixed;
-	top: 0;
-	right: 0;
-	height: 8cm;
-	width: 16cm;
-	object-fit: cover;
-	filter: hue-rotate(240deg);
-}
-.background {
-	position: fixed;
-	left: 0;
-	bottom: 0;
-	width: calc(100% + 72mm);
-	height: calc(100% + 12mm);
-	border-radius: 0 25cm 0 0;
-	background: #FFF;
-	box-shadow: 2mm -2mm 4mm #0002;
-}
-
-/* Layout */
-.lr, .tb {
-	display: flex;
-	align-items: flex-start;
-	flex-wrap: nowrap;
-	flex-grow: 1;
-	flex: 1 1 0;
-	width: 100%;
-}
-.lr {
-	flex-direction: row;
-}
-.tb {
-	flex-direction: column;
-}
-
-/* Common */
-.section {
-	width: 100%;
-	padding: 2mm 0;
-	z-index: 1;
-}
-.section .name {
-	letter-spacing: .4mm;
-	font-weight: bold;
-	margin: 2mm 0 1mm;
-	font-size: 5mm;
-	font-family: "Advent Pro";
-	position: relative;
-	display: inline-block;
-	z-index: 5;
-}
-.section .name::before {
-	content: " ";
-	position: absolute;
-	bottom: 0;
-	left: -1mm;
-	width: calc(100% + 2mm);
-	height: 50%;
-	z-index: -1;
-	background: #F99D;
-	border-radius: 3mm 1cm 3mm 1cm;
-}
-
-/* Left */
-.sidebar {
-	width: 100%;
-	height: 100%;
-	padding: 4mm;
-	max-width: 62mm;
-	z-index: 1;
-}
-.sidebar .profile-pic {
-	width: 100%;
-	text-align: center;
-}
-.sidebar .profile-pic i {
-	font-size: 40mm;
-	margin: 40px auto 20px;
-	padding: 4px;
-	border-radius: 1000px;
-	border: 1mm solid #BBB8;
-}
-.sidebar .section {
-	border: 1mm solid #FB0;
-	border-radius: 0 24mm 6mm 0;
-	border-left: none;
-	overflow: hidden;
-	margin: 3mm 0 3mm -4mm;
-	padding: 1mm 2mm 0 5mm;
-}
-.sidebar .section .item {
-	display: flex;
-	align-items: center;
-	margin: 3.5mm 0;
-}
-.sidebar .section .item > i {
-	border-radius: 10cm;
-	color: #633;
-	padding-right: 4mm;
-}
-.sidebar .section .item .value {
-	font-weight: bold;
-	display: flex;
-	align-items: center;
-	z-index: 2;
-}
-.sidebar .section .item .value > i {
-	font-size: 4mm;
-	margin-right: 1mm;
-}
-.sidebar .section .item .desc {
-	opacity: .65;
-	font-size: 2.75mm;
-	font-weight: bold;
-}
-.sidebar .contact .value {
-	font-family: "Lekton";
-	font-size: 3.5mm;
-}
-.sidebar .github img {
-	width: 7mm;
-	height: 6mm;
-	object-fit: fill;
-	border-radius: 1cm;
-	margin-right: 4mm;
-	margin-left: -.25mm;
-}
-
-/* Right */
-.content {
-	z-index: 1;
-	padding: 4mm;
-	margin: 1mm 1mm 0 1mm;
-}
-.content .full-name {
-	margin: 10mm 0 2mm;
-	line-height: 1.1;
-	font-size: 16mm;
-	font-family: "Jura";
-	font-weight: 600;
-}
-.content .full-name div::after {
-	content: "_";
-	opacity: .25;
-}
-.content .specialization-summary {
-	font-size: 4mm;
-	font-weight: bold;
-	font-family: "Lekton";
-	margin: 1mm 0 4mm;
-	opacity: .65;
-}
-.skills {
-	display: flex;
-	flex-wrap: wrap;
-	border-radius: 8mm;
-	overflow: hidden;
-	margin: 3mm 0 1mm;
-}
-.skills > div {
-	flex: 1;
-	--color: 23;
-	--margin: 1mm;
-	background: linear-gradient(-30deg, hsl(var(--color), 100%, 96%), hsl(var(--color), 100%, 99%) 67%);
-	border: 1mm solid hsl(var(--color), 100%, 96%);
-	color: hsl(var(--color), 100%, 11%);
-	padding: 3mm;
-	border-radius: 2mm;
-	z-index: 2;
-	min-width: 40%;
-	overflow: hidden;
-}
-.skills .b1 {
-	border-top-left-radius: inherit;
-	margin-bottom: var(--margin);
-	margin-right: var(--margin);
-}
-.skills .b2 {
-	border-top-right-radius: inherit;
-	margin-bottom: var(--margin);
-}
-.skills .b3 {
-	border-bottom-left-radius: inherit;
-	margin-right: var(--margin);
-}
-.skills .b4 {
-	border-bottom-right-radius: inherit;
-}
-.skills .title {
-	display: flex;
-	font-weight: bold;
-	align-items: flex-end;
-	letter-spacing: .1mm;
-	position: relative;
-	font-size: 5.5mm;
-	margin: -1mm 0 -.75mm;
-	font-family: "Smooch Sans";
-}
-.skills .title i {
-	position: absolute;
-	margin-right: 2mm;
-	color: hsl(var(--color), 100%, 20%);
-	font-size: 24mm;
-	opacity: .2;
-	height: 8mm;
-	z-index: -1;
-	top: -7mm;
-	left: -7mm;
-}
-.skills .title div {
-	display: block;
-	margin: .25mm auto 1mm;
-	text-align: center;
-}
-.skills .text {
-	font-size: 2.75mm;
-}
-.skills .bubbles {
-	overflow: hidden;
-	margin: 2mm 0 .25mm;
-	border-radius: 8mm;
-	display: inline-flex;
-}
-.skills .bubbles div {
-	font-size: 2.25mm;
-	padding: 1mm 1.5mm;
-	background: hsl(var(--color), 100%, 80%);
-	display: inline-block;
-	margin: 0 .25mm;
-	font-weight: bold;
-	color: #000A;
-	border-radius: .5mm;
-}
-.skills .bubbles div:first-child {
-	margin-left: 0;
-}
-.skills .bubbles div:last-child {
-	margin-right: 0;
-}
-.competition {
-	display: flex;
-	flex: 1;
-	align-items: center;
-	flex-wrap: wrap;
-	margin-top: 4mm;
-}
-.competition > div {
-	display: flex;
-	align-self: flex-start;
-	margin: .5mm;
-	border-radius: 2mm;
-	padding: 2mm;
-	overflow: hidden;
-	border: 1mm solid hsl(var(--color), 100%, 96%);
-	background: linear-gradient(-90deg, hsl(var(--color), 100%, 96%), hsl(var(--color), 100%, 99%) 67%);
-}
-.competition > div:first-child {
-	border-top-left-radius: 8mm;
-	border-top-right-radius: 8mm;
-}
-.competition > div:last-child {
-	border-bottom-left-radius: 8mm;
-	border-bottom-right-radius: 8mm;
-}
-.competition i {
-	font-size: 12mm;
-	position: relative;
-	margin-right: 2mm;
-	color: hsl(var(--color), 100%, 45%);
-}
-.competition .title {
-	font-family: "Geo";
-	font-size: 4.25mm;
-	letter-spacing: .1mm;
-	font-weight: bold;
-}
-.competition .desc {
-	font-size: 2.75mm;
-	opacity: .85;
-}
-.competition .gold {
-	--color: 50;
-}
-.competition .silver i {
-	opacity: .5;
-}
-.competition i::after {
-	position: absolute;
-	left: 50%;
-	top: 3.25mm;
-	transform: translateX(-50%);
-	font-family: monospace;
-	font-size: 3mm;
-	text-align: center;
-	font-weight: bold;
-}
-.competition .silver {
-	--color: 0;
-	filter: grayscale(1);
-}
-.competition .gold i::after {
-	content: "1";
-}
-.competition .silver i::after {
-	content: "2";
-}
-.policy {
-	display: flex;
-	align-items: center;
-	font-size: 2.25mm;
-	font-weight: bold;
-	position: absolute;
-	bottom: 0;
-	left: 50%;
-	max-width: 15cm;
-	z-index: 1;
-	opacity: .4;
-	transform: translate(-50%, -100%);
-}
-.policy i {
-	font-size: 5mm;
-	margin-right: 1mm;
-}
+@import url(components/core.css);
+@import url(components/common.css);
+@import url(components/name.css);
+@import url(components/sidebar.css);
+@import url(components/content.css);
+@import url(components/misc.css);
