--- a/html/templates/fancy/index.html
+++ b/html/templates/fancy/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html class="" lang="en">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style/main.css">
-	<title>Primary</title>
 </head>
 <body>
 	<div class="background-image"></div>
