--- a/html/css/main.css
+++ b/html/css/main.css
@@ -1,17 +1,18 @@
+/* html {filter: invert(1)} */
+
 body {
-	background: #222;
+	background: #FFF;
 	color: #0FB;
 	font-family: monospace;
-	filter: invert(1);
 	margin: 0;
 	padding: 0;
 }
 
 #ifr {
+	position: absolute;
 	width: 210mm;
 	height: 297mm;
 	overflow: hidden;
-	position: fixed;
 	top: 0;
 	left: 0;
 	border: none;
