Minor color improvements

--- a/html/templates/fancy/style/components/common.css
+++ b/html/templates/fancy/style/components/common.css
@@ -38,6 +38,6 @@
 	width: calc(100% + 2mm);
 	height: 50%;
 	z-index: -1;
-	background: #F99D;
+	background: #FAA;
 	border-radius: 3mm 1cm 3mm 1cm;
 }
