--- a/html/templates/fancy/style/components/content.css
+++ b/html/templates/fancy/style/components/content.css
@@ -104,7 +104,7 @@
 	display: inline-block;
 	margin: 0 .25mm;
 	font-weight: bold;
-	color: #000A;
+	color: #000B;
 	border-radius: .5mm;
 }
 .skills .bubbles div:first-child {
