Implement renderer for 'fancy' CV template

--- a/html/templates/fancy/index.html
+++ b/html/templates/fancy/index.html
@@ -65,7 +65,6 @@
 									<div>Szkolenie BHP</div>
 								</div>
 								<div class="desc">Certyfikat XD z programowania na poziomie średniopodstawowym</div>
-								<div class="desc">Uniwersytet Twojej Starej w Lublinie</div>
 							</div>
 						</div>
 						<div class="item">
@@ -74,7 +73,6 @@
 									<i>school</i>
 									<div>Technik Matematyk</div>
 								</div>
-								<div class="desc">Kwalifikacje E68, E69 i X11</div>
 								<div class="desc">Zespół Szkół nr 69 im. Twojej Starej w Sosnowcu</div>
 							</div>
 						</div>
@@ -115,16 +113,16 @@
 
 					<div class="specialization-summary">Hobbyist farmer, professional thief, reliable killer</div>
 
-					<div class="section">
+					<div class="section about-me">
 						<div class="name">O mnie</div>
 						<div class="text">I'm a motivated Marketing Assistant with 2 years of e-commerce experience. I excel at social media and content creation, collaborating effectively to deliver engaging campaigns. I'm known for my proactive approach and strong organizational skills, reflecting our dedication to exceptional customer experiences. I'm eager to learn new digital marketing strategies and contribute to the company's continued growth and success.</div>
 					</div>
 
-					<div class="section">
+					<div class="section skills">
 						<div class="name">Umiejętności</div>
 						<div class="desc">I'm Gemma, a language model! I help gema, a language model! I help generate text, answer questions, and chat. I love learning new things and exploring language!</div>
-						<div class="skills">
-							<div class="b1" style="--color: 0">
+						<div class="skillbox">
+							<div class="item b1" style="--color: 0">
 								<div class="title">
 									<i>handyman</i>
 									<div>Narzędzia</div>
@@ -138,7 +136,7 @@
 									<div>łom</div>
 								</div>
 							</div>
-							<div class="b2" style="--color: 120">
+							<div class="item b2" style="--color: 120">
 								<div class="title">
 									<i>engineering</i>
 									<div>Sprzęt</div>
@@ -153,7 +151,7 @@
 									<div>ciekły azot</div>
 								</div>
 							</div>
-							<div class="b3" style="--color: 210">
+							<div class="item b3" style="--color: 210">
 								<div class="title">
 									<i>terminal</i>
 									<div>Administracja</div>
@@ -168,7 +166,7 @@
 									<div>iOS</div>
 								</div>
 							</div>
-							<div class="b4" style="--color: 40">
+							<div class="item b4" style="--color: 40">
 								<div class="title">
 									<i>wifi</i>
 									<div>Sieci</div>
@@ -190,14 +188,14 @@
 						<div class="name">Osiągnięcia</div>
 						<div class="text">I'm known for my proactive approach and strong organizational skills, reflecting our dedication to exceptional customer experiences. I'm eager to learn new digital marketing strategies and contribute to the company's continued growth and success.</div>
 						<div class="competition">
-							<div class="gold">
+							<div class="item gold">
 								<i>trophy</i>
 								<div>
 									<div class="title">CyberSkiller</div>
 									<div class="desc">1. miejsce w województwie lubelskim w drugim i trzecim etapie konkursu tematyki cyberbezpieczeństwa CyberSkiller w 2023 roku</div>
 								</div>
 							</div>
-							<div class="silver">
+							<div class="item silver">
 								<i>trophy</i>
 								<div>
 									<div class="title">153+1 CTF</div>
