--- a/html/templates/fancy/style/material-icons/material-icons.css
+++ b/html/templates/fancy/style/material-icons/material-icons.css
@@ -10,6 +10,7 @@ i {
   font-weight: normal;
   font-style: normal;
   font-size: 24px;
+	overflow: hidden;
   line-height: 1;
   letter-spacing: normal;
   text-transform: none;
