--- a/html/templates/fancy/style/components/sidebar.css
+++ b/html/templates/fancy/style/components/sidebar.css
@@ -50,6 +50,7 @@
 .sidebar .section .item .value > i {
 	font-size: 4mm;
 	margin-right: 1mm;
+	margin-top: .5mm;
 }
 .sidebar .section .item .desc {
 	opacity: .65;
@@ -63,7 +64,7 @@
 	font-size: 3.5mm;
 }
 .sidebar .github img {
-	width: 7mm;
+	width: 6.66mm;
 	height: 6mm;
 	object-fit: fill;
 	border-radius: 1cm;
